examples/invalid/semanticErr/function/functionBadArgUse.wacc
# function parameter misused
# Output:
# #semantic error#

#Program:#

begin
	int f(int x) is
    bool b = x && true ;
		return 0
	end
  int x = call f(0) 
end
	
